@@ -72,6 +72,8 @@ class Net::SSLeay::X509 : pointer {
   
   native method get_ext_by_OBJ : int ($obj : Net::SSLeay::ASN1_OBJECT, $lastpos : int);
   
+  native method get_ext_count : int ();
+  
   native method DESTROY : void ();
   
 }
